--- a/my_app/templates/my_app/listing.html
+++ b/my_app/templates/my_app/listing.html
@@ -99,18 +99,16 @@
                               <div class="filters-card-body card-shop-filters pt-0">
                                  <div class="custom-control custom-radio">
                                     <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked="">
-                                    <label class="custom-control-label" for="customRadio1">Gold Partner</label>
+                                    <label class="custom-control-label" for="customRadio1">Bu yerda sizni reklamangiz bolishi mumkin edi </label>
+                                    
                                  </div>
                                  <div class="custom-control custom-radio mt-1 mb-1">
                                     <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadio2">Order Food Online</label>
                                  </div>
 								         <div class="custom-control custom-radio">
                                     <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input" checked="">
-                                    <label class="custom-control-label" for="customRadio3">Osahan Eat</label>
                                  </div>
                                  <hr>
-                                 <small class="text-success">Use code OSAHAN50 to get 50% OFF (up to $30) on first 5 orders. T&Cs apply.</small>
                               </div>
                            </div>
                         </div>
@@ -146,13 +144,5 @@
          </div>
          </div>
       </section>
-      <section class="section pt-5 pb-5 text-center bg-white">
-         <div class="container">
-            <div class="row">
-               <div class="col-sm-12">
-                  <h5 class="m-0">Operate food store or restaurants? <a href="login.html">Work With Us</a></h5>
-               </div>
-            </div>
-         </div>
-      </section>
+ 
       {% endblock content %}
