--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -7,7 +7,7 @@
       <div class="row d-flex align-items-center">
          <div class="col-md-8">
             <div class="homepage-search-title">
-               <h1 class="mb-2 font-weight-normal"><span class="font-weight-bold">Ajoyib narxlar faqat</span> faqat Farg'onada</h1>
+               <h1 class="mb-2 font-weight-normal"><span class="font-weight-bold">Ajoyib narxlar faqat</span>  Farg'onada</h1>
                <h5 class="mb-5 text-secondary font-weight-normal">Farg'onadagi tendentsiyalarga asoslangan eng yaxshi restoranlar, va barlar ro'yxati</h5>
             </div>
             <div class="homepage-search-form">
