--- a/my_app/templates/my_app/showeat.html
+++ b/my_app/templates/my_app/showeat.html
@@ -8,7 +8,8 @@
                 <!-- Display star rating badge -->
                 <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> {{ place.star_rating }} ({{ place.reviews_count }}+)</span></div>
                 <!-- Display favourite icon with link to detail page -->
-                <div class="favourite-heart text-danger position-absolute"><a href="{{ place.detail_url }}"><i class="icofont-heart"></i></a></div>
+                <div class="favourite-heart text-danger position-absolute"><a href="{{ place.detail_url }}"><i class="icofont-heart" value="{{ product.id}}"
+                    id="heart"></i></a></div>
                 <!-- Display member plan badge -->
                 {% if place.promoted %}
                 <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
@@ -24,16 +25,19 @@
                     <h6 class="mb-1"><a href="{{ place.detail_url }}" class="text-black">{{ product.name }}</a></h6>
                     <!-- Display cuisine types -->
                     <p class="text-gray mb-3"><a href="{% url 'detail' product.restaurant.id %}">{{ product.restaurant.name }}</a></p>
+                    <span class="text-dark rounded-sm "></i> {{product.description}} </span>
+                    <span class="text-dark rounded-sm "></i> </span>
+
 
                     <!-- Display estimated delivery time and cost for two -->
                     <p class="text-gray mb-3 time">
                         <span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"></i> {{product.price}} so'm</span>
-                        <span class="float-right text-black-50"> Turi: {{ place.type_place }} </span>
+                        <span class="float-right text-black-50"> Turi: {{ product.category }} </span>
                     </p>
                 </div>
                 <!-- Display offer badge and details -->
                 <div class="list-card-badge">
-                    <span class="badge badge-success">OFFER</span> <small>{{ place.offer_details }}</small>
+                    <span class="badge badge-success">YANGILIK</span> <small>{{ place.offer_details }}</small>
                 </div>
             </div>
         </div>
