--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                   </li>
                   <li class="nav-item dropdown dropdown-cart">
                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     <i class="fas fa-heart"></i> Cart
+                     <i class="fas fa-heart"></i> <span class="badge badge-danger">LIKE</span>
                      <span class="badge badge-success" id="like_items">{{ request.session.liked_products|length }}</span>
                      </a>
                      <div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
