--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -61,9 +61,9 @@
             </li>
          </ul>
       </nav>
-      <div id="layoutSidenav">
-      <div id="layoutSidenav_nav">
-         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+      <div id="layoutSidenav1">
+      <div id="layoutSidenav_nav1">
+         <nav class="sb-sidenav sb-sidenav-dark" id="sidenavAccordion1">
             <div class="sb-sidenav-menu">
                <div class="nav">
                   <div class="sb-sidenav-menu-heading">Menyu</div>
